crates/parser/tests/snapshots/parser_test__visibility.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: add
      visibility: Pub
      type_params: []
      params:
        - name: a
          ty:
            Named:
              name: Int
              span:
                - 15
                - 18
          span:
            - 12
            - 18
        - name: b
          ty:
            Named:
              name: Int
              span:
                - 23
                - 26
          span:
            - 20
            - 26
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 31
            - 34
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: a
              span:
                - 37
                - 38
          rhs:
            Var:
              name: b
              span:
                - 41
                - 42
          span:
            - 37
            - 42
      span:
        - 0
        - 42
